syntax = "proto3";
package Service.InvestEngine.Prices.Grpc;
import "google/protobuf/empty.proto";
import "bcl.proto"; // schema for protobuf-net's handling of core .NET types

message MakePriceRequest {
   string Symbol = 1;
   .bcl.Decimal Ask = 2;
   .bcl.Decimal Bid = 3;
   .bcl.Decimal Last = 4;
}
service PriceManagerService {
   rpc MakePrice (MakePriceRequest) returns (.google.protobuf.Empty);
}
